--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -28,9 +28,11 @@ jobs:
           echo '</rss>' >> meniny.xml
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add meniny.xml
-          git commit -m "Automatická aktualizácia menín"
-          git push
+          git commit -m "Automatická aktualizácia menín" || exit 0
+          git push origin main
