--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/TVOJ-USERNAME/TVOJ-REPO.git
+          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/DKR450/workflows.git
           git add meniny.xml
           git commit -m "Automatická aktualizácia menín" || exit 0
           git push origin main
