--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -27,7 +27,7 @@ jobs:
           echo '        <item>' >> meniny.xml
           echo '            <title>Meniny '$(date +"%d. %B")'</title>' >> meniny.xml
           echo '            <link>https://github.com/DKR450/workflows/blob/main/meniny.xml</link>' >> meniny.xml
-          echo '            <description>Dnes majú meniny '$namedays_sk'</description>' >> meniny.xml
+          echo '            <description>Dnes má meniny '$namedays_sk'</description>' >> meniny.xml
           echo '            <pubDate>'$(date -R)'</pubDate>' >> meniny.xml
           echo '        </item>' >> meniny.xml
           echo '    </channel>' >> meniny.xml
