--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Generate RSS file
         run: |
           # Získanie menín pre Slovensko
-          namedays_sk=$(curl -s "https://nameday.abalin.net/api/V2/today/bratislava" | jq -r 'data.sk')
+          # namedays_sk=$(curl -s "https://nameday.abalin.net/api/V2/today/bratislava" | jq -r 'data.sk')
           response=$(curl -s "https://nameday.abalin.net/api/V2/today/bratislava")
           
           if echo "$response" | jq empty 2>/dev/null; then
