--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -16,16 +16,8 @@ jobs:
         run: |
           # Získanie menín pre Slovensko
           # namedays_sk=$(curl -s "https://nameday.abalin.net/api/V2/today/bratislava" | jq -r 'data.sk')
-          response=$(curl -s "https://nameday.abalin.net/api/V2/today/bratislava")
-          
-          if echo "$response" | jq empty 2>/dev/null; then
-            namedays_sk=$(echo "$response" | jq -r '.data.sk')
-            echo "Dnes má meniny: $namedays_sk"
-          else
-            echo "Chyba: API nevrátilo validný JSON"
-            echo "$response"
-            exit 1
-          fi
+          namedays_sk= GET /today?country_code=SK
+
 
 
           
