--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -15,12 +15,8 @@ jobs:
       - name: Generate RSS file
         run: |
           # Získanie menín pre Slovensko
-          # namedays_sk=$(curl -s "https://nameday.abalin.net/api/V2/today/bratislava" | jq -r 'data.sk')
-          namedays_sk= GET /today?country_code=SK
-
-
-
-          
+          namedays_sk=$(curl -s "http://api.minuto.cz/namedays/namedayAPI.php/today?country_code=sk" | jq -r '.names')
+                    
           echo '<?xml version="1.0" encoding="UTF-8" ?>' > meniny.xml
           echo '<rss version="2.0">' >> meniny.xml
           echo '    <channel>' >> meniny.xml
