--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -15,7 +15,17 @@ jobs:
       - name: Generate RSS file
         run: |
           # Získanie menín pre Slovensko
-          namedays_sk=$(curl -s -H "User-Agent: Mozilla" "http://api.minuto.cz/namedays/namedayAPI.php/today?country_code=sk" | jq -r '.names[]')
+          # namedays_sk=$(curl -s -H "User-Agent: Mozilla" "http://api.minuto.cz/namedays/namedayAPI.php/today?country_code=sk" | jq -r '.names[]')
+          
+          # Získanie odpovede z API
+          response=$(curl -s "http://api.minuto.cz/namedays/namedayAPI.php/today?country_code=sk")
+
+          # Kontrola, či je odpoveď platný JSON
+          echo "$response" | jq . > /dev/null 2>&1
+          if [ $? -ne 0 ]; then
+            echo "$response"
+            exit 1
+          fi
 
                     
           echo '<?xml version="1.0" encoding="UTF-8" ?>' > meniny.xml
