--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -3,54 +3,27 @@ name: Update Meniny RSS
 on:
   schedule:
     - cron: '0 0 * * *' # Spustí sa každý deň o polnoci
-  workflow_dispatch:      # Umožní ručné spustenie cez GitHub UI
-  
+  workflow_dispatch:     # Umožní ručné spustenie cez GitHub UI
+
 jobs:
   update-rss:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
-      - name: Generate RSS file
-        run: |
-          MAX_RETRIES=5
-          RETRY_DELAY=5 # sekúnd
 
-          for i in $(seq 1 $MAX_RETRIES); do
-            response=$(curl -s -o - "https://nameday.abalin.net/api/V2/today/bratislava")
-            if [[ "$response" != *"<!DOCTYPE html><html lang="en-US"><head><title>Just a moment..."* ]]; then
-              echo "API hovor úspešný po $i pokusoch."
-              echo "$response"
-              break
-            else
-              echo "API vrátilo 'just a moment'. Pokus $i z $MAX_RETRIES. Čakám $RETRY_DELAY sekúnd..."
-              sleep $RETRY_DELAY
-              RETRY_DELAY=$((RETRY_DELAY * 2)) # Exponenciálne navyšovanie čakacej doby
-            fi
-            if [[ $i -eq $MAX_RETRIES ]]; then
-              echo "Všetky pokusy zlyhali. API stále vracia 'just a moment'."
-              exit 1
-            fi
-          done
-          # Získanie menín pre Slovensko
-          # namedays_sk=$(curl -s "https://nameday.abalin.net/api/V2/today/bratislava" | jq -r '.data.sk')
-          
-          echo '<?xml version="1.0" encoding="UTF-8" ?>' > meniny.xml
-          echo '<rss version="2.0">' >> meniny.xml
-          echo '    <channel>' >> meniny.xml
-          echo '        <title>Meniny na Slovensku</title>' >> meniny.xml
-          echo '        <link>https://github.com/DKR450/workflows/blob/main/meniny.xml</link>' >> meniny.xml
-          echo '        <description>Meniny na Slovensku pre dnešný deň</description>' >> meniny.xml
-          echo '        <language>sk</language>' >> meniny.xml
-          echo '        <item>' >> meniny.xml
-          echo '            <title>Dnes má meniny '$namedays_sk'</title>' >> meniny.xml
-          echo '            <link>https://github.com/DKR450/workflows/blob/main/meniny.xml</link>' >> meniny.xml
-          echo '            <description>Dnes má meniny '$namedays_sk'</description>' >> meniny.xml
-          echo '            <pubDate>'$(date -R)'</pubDate>' >> meniny.xml
-          echo '        </item>' >> meniny.xml
-          echo '    </channel>' >> meniny.xml
-          echo '</rss>' >> meniny.xml
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
+      - name: Run Python script to generate RSS
+        run: python update_meniny.py
 
       - name: Commit and push changes
         env:
