--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -23,8 +23,7 @@ jobs:
           pip install requests
 
       - name: Run Python script to generate RSS
-        run: python update_meniny.py
-
+        run: python .github/workflows/update_meniny.py
       - name: Commit and push changes
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
