--- a/.github/workflows/update-meniny.yml
+++ b/.github/workflows/update-meniny.yml
@@ -3,27 +3,46 @@ name: Update Meniny RSS
 on:
   schedule:
     - cron: '0 0 * * *' # Spustí sa každý deň o polnoci
-  workflow_dispatch:     # Umožní ručné spustenie cez GitHub UI
-
+  workflow_dispatch:      # Umožní ručné spustenie cez GitHub UI
+  
 jobs:
   update-rss:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
+        
+      - name: Generate RSS file
         run: |
-          python -m pip install --upgrade pip
-          pip install requests
+          # Získanie menín pre Slovensko
+          curl -sL https://github.com/jozefgrencik/slovak-name-days/blob/main/data/names.json > names.json
+          echo "Stiahnuté dáta mien."
+                 
+      - name: Get today's date
+        run: |
+          today=$(date +'%Y-%m-%d')
+          namedays=$(cat names.json | jq -r ".days.\"$today\"[]" | paste -sd ', ')
 
-      - name: Run Python script to generate RSS
-        run: python .github/workflows/update_meniny.py
+          if [ -z "$namedays" ]; then
+            echo "Pre dátum $today neboli nájdené žiadne meniny."
+            exit 0
+          fi
+
+          echo '<?xml version="1.0" encoding="UTF-8" ?>' > meniny.xml
+          echo '<rss version="2.0">' >> meniny.xml
+          echo '  <channel>' >> meniny.xml
+          echo '    <title>Meniny na Slovensku</title>' >> meniny.xml
+          echo '    <link>https://github.com/DKR450/workflows/blob/main/meniny.xml</link>' >> meniny.xml
+          echo '    <description>Meniny na Slovensku pre dnešný deň</description>' >> meniny.xml
+          echo '    <language>sk</language>' >> meniny.xml
+          echo '    <item>' >> meniny.xml
+          echo '      <title>Dnes má meniny '$namedays'</title>' >> meniny.xml
+          echo '      <link>https://github.com/DKR450/workflows/blob/main/meniny.xml</link>' >> meniny.xml
+          echo '      <description>Dnes má meniny '$namedays'</description>' >> meniny.xml
+          echo '      <pubDate>'$(date -R)'</pubDate>' >> meniny.xml
+          echo '    </item>' >> meniny.xml
+          echo '  </channel>' >> meniny.xml
+          echo '</rss>' >> meniny.xml
       - name: Commit and push changes
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
